# darknet_vs

./: CMakeLists.txt  README.md
build_vs/: gen_vs.bat
cfg/: coco.data
examples/: art.c  attention.c  captcha.c  classifier.c  darknet.c  detector.c  dice.c  go.c  instance-segmenter.c  nightmare.c  regressor.c  rnn_vid.c  segmenter.c  swag.c  voxel.c  writing.c
include/: darknet.h
src/: activations.h  compare.c  convolutional_layer.c  data.c  data.h  demo.c  image.c  list.c  matrix.c  network.c  parser.c  utils.c  utils.h
